--- a/README.adoc
+++ b/README.adoc
@@ -20,3 +20,4 @@ Short investigations, experiments, etc.
 1. link:stirling-bins-revisited/[Stirling's bin collection data - revisited]
 1. link:architecture-revised/[The prototype's architecture - revised]
 1. link:carbon-savings/[Building linked open data about carbon savings]
+1. link:annotations-PoC/[Annotating data points on our prototype website]
